# libndef-lite

./: .clang-format  .gitignore  .readthedocs.yml  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  Makefile  README.md  TODO.md  test.c
docs/: conf.py  index.rst  requirements.txt
include/: encoding.hpp  exceptions.hpp  ndef.hpp  ndefRecord.hpp  recordHeader.hpp  recordType.hpp  span.h  span.hpp  typeNameFormat.hpp  util.hpp
include/ndef/: encoding.hpp  exceptions.hpp  message.hpp  record-header.hpp  record-type.hpp  record.hpp
include/ndef-lite/: message.hpp  record-header.hpp  record-type.hpp  record.hpp  util.hpp
src/: encoding.cpp  lib.rs  message.cpp  ndef-record.cpp  ndef.c  ndef.cpp  ndefRecord.cpp  record-header.cpp  record-type.cpp  recordHeader.cpp  recordType.cpp  record_header.rs  text-record.cpp  tnf.rs  typeNameFormat.cpp  types.rs  uri-record.cpp  uri_record.cpp
src/well_known_types/: mod.rs  text.rs  uri.rs
test/: CMakeLists.txt  test-constants.hpp  test-encoding.cpp  test-main.cpp  test-message.cpp  test-ndef.cpp  test-record.cpp  test-recordHeader.cpp  test-recordType.cpp  test-textRecord.cpp  test-uriRecord.cpp  test-util.cpp
